<?xml version="1.0" encoding="utf-8"?>
<!--
    Itens da Bottom Navigation: cada um corresponde a um Fragment da MainActivity.
    A visibilidade muda com o modo: Aluno (Hoje, Semana, Perfil) ou Coach (Alunos, Perfil).
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_today"
        android:icon="@drawable/ic_fitness"
        android:title="@string/nav_today" />
    <item
        android:id="@+id/nav_week"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_week" />
    <item
        android:id="@+id/nav_students"
        android:icon="@drawable/ic_group"
        android:title="@string/nav_students"
        android:visible="false" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
