<?xml version="1.0" encoding="utf-8"?>
<!-- Cadastro de aluno (modo Coach), aberto por Intent explícita. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.students.StudentFormActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.AppTreino.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/student_form_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/screen_padding"
            android:paddingTop="@dimen/space_sm"
            android:paddingEnd="@dimen/screen_padding"
            android:paddingBottom="@dimen/space_xxl">

            <TextView
                style="@style/AppTreino.Text.BodySecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_form_subtitle" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_xl" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                style="@style/Widget.AppTreino.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLength="60"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_lg" />

            <!-- Objetivo: um chip por opção (criados a partir do enum Goal) -->
            <TextView
                style="@style/AppTreino.Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_goal" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                app:selectionRequired="true"
                app:singleSelection="true" />

            <TextView
                android:id="@+id/text_goal_error"
                style="@style/AppTreino.Text.Error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_goal_required"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_lg" />

            <!-- Idade, peso e altura na mesma linha -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_age"
                    style="@style/Widget.AppTreino.TextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_age"
                    app:suffixText="@string/unit_years">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="@dimen/space_sm"
                    android:layout_height="match_parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_weight"
                    style="@style/Widget.AppTreino.TextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_weight"
                    app:suffixText="@string/unit_kg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/digits_decimal"
                        android:inputType="numberDecimal"
                        android:maxLength="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="@dimen/space_sm"
                    android:layout_height="match_parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_height"
                    style="@style/Widget.AppTreino.TextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_height"
                    app:suffixText="@string/unit_cm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_lg" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_notes"
                style="@style/Widget.AppTreino.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_notes_optional"
                app:counterEnabled="true"
                app:counterMaxLength="200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLength="200"
                    android:minLines="3" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/layout_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_bar"
        android:orientation="vertical"
        android:paddingStart="@dimen/screen_padding"
        android:paddingTop="@dimen/space_md"
        android:paddingEnd="@dimen/screen_padding"
        android:paddingBottom="@dimen/space_md">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            style="@style/Widget.AppTreino.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_save_student"
            app:icon="@drawable/ic_check"
            app:iconGravity="textStart" />
    </LinearLayout>
</LinearLayout>
