<?xml version="1.0" encoding="utf-8"?>
<!-- Formulário de cardio (bottom sheet do editor de treino). -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/screen_padding"
        android:paddingTop="@dimen/space_sm"
        android:paddingEnd="@dimen/screen_padding"
        android:paddingBottom="@dimen/space_xl">

        <TextView
            style="@style/AppTreino.Text.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardio_sheet_title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_lg" />

        <TextView
            style="@style/AppTreino.Text.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_cardio_type" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            app:selectionRequired="true"
            app:singleSelection="true" />

        <TextView
            android:id="@+id/text_type_error"
            style="@style/AppTreino.Text.Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_cardio_type"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_lg" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_duration"
            style="@style/Widget.AppTreino.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_duration"
            app:suffixText="@string/unit_minutes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_lg" />

        <TextView
            style="@style/AppTreino.Text.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_intensity" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_intensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            app:selectionRequired="true"
            app:singleSelection="true" />

        <TextView
            android:id="@+id/text_intensity_error"
            style="@style/AppTreino.Text.Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_intensity"
            android:visibility="gone"
            tools:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_lg" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_note"
            style="@style/Widget.AppTreino.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_coach_note_optional">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="200"
                android:minLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_xl" />

        <include
            android:id="@+id/buttons"
            layout="@layout/view_sheet_buttons" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
